<resources>
    <string name="app_name" translatable="false">MSDB Client</string>

    <string name="menu_home" translatable="false">Motorsports Database</string>

    <string name="upcomingEvents">Upcoming events</string>
    <string name="noEvents">No data is available right now</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="managePreferences">Manage your preferences</string>

    <string name="processingData">Processing data</string>
    <string name="submit">Save</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="sessionTypes">Session types</string>
    <string name="notificationTime">Notice time</string>
    <string name="practice">Practices</string>
    <string name="qualifying">Qualifying</string>
    <string name="races">Races</string>
    <string name="fifteenMin">15 minutes</string>
    <string name="oneHour">1 hour</string>
    <string name="threeHours">3 hours</string>

    <string name="saving">Saving preferences</string>
    <string name="saved">Preferences saved</string>

    <string name="upcomingSession">Upcoming event</string>
    <string name="upcomingSessionMessage">%1$s session of %2$s begins at %3$s</string>
    <string name="default_notification_channel_id" translatable="false">msdb_channel_id</string>
    <string name="default_notification_channel_name" translatable="false">Motorsports Database channel</string>
    <string name="session">Session: %1$s</string>
    <string name="startTime">Start time: %1$s</string>
    <string name="endTime">End time: %1$s</string>
    <string name="distance">Distance: %1$s km</string>
    <string name="where">At: %1$s</string>
    <string name="event">Event: %1$s</string>
    <string name="filterLabel">Filter series:</string>
    <string name="filterHint">Type something to filter series</string>
    <string name="savingError">Couldn\'t save preferences: %1$s</string>
    <string name="eventDetailsInfoTab">Info</string>
    <string name="eventDetailsParticipantsTab">Participants</string>
    <string name="eventDate">Event date:</string>
    <string name="racetrackName">Racetrack:</string>
    <string name="eventSessions">Sessions</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="laps">laps</string>
    <string name="km" translatable="false">km</string>
    <string name="miles">miles</string>
    <string name="plusExtraLap">+ 1 lap</string>
    <string name="offline">Due to the problems suffered by our hosting provider, this app is offline at least till Monday, March 15th. Apologies for all inconveniences</string>
    <string name="cancelled">Cancelled</string>
    <string name="filterSeriesSettingsTitle">Series to be displayed</string>
    <string name="filterSeriesSettingsDesc">Enable which series you want to see in the home screen</string>
    <string name="maintenanceTitle">Maintenance mode</string>
    <string name="maintenanceDescription">Application is currently in maintenance mode. We will be back online as soon as possible.</string>
    <string name="oldVersionTitle">Outdated Version</string>
    <string name="oldVersionMsg">You are currently using version %1$s and version %2$s is available. Please update at your earliest convenience</string>
    <string name="oldVersionUpdate">Update</string>
    <string name="oldVersionLater">Later</string>
    <string name="nav_support">Support</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_championships">Championships</string>
    <string name="title_activity_series">SeriesActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>