<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserSubscriptionsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MSDBClient.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/userSubscriptionsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/subscriptions"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleUserSubscriptionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/managePreferences"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/userSubscriptionsFragmentView"
            android:name="com.icesoft.msdb.android.ui.usersubscriptions.UserSubscriptionsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/saveButton"
            android:layout_below="@id/titleUserSubscriptionsTextView"
            android:layout_alignParentBottom="false" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/submit" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>